--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
+url: "https://Grentchello.github.io"
+baseurl: "/Blog3"
+repository: "Grentchello/Blog3"
 title: My Tech & Astro Blog
 author: Grant
 description: A place to document my programming and astrophotography projects.
+
 theme: minima
